adicionar datos a base de datos adicionado

--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+        <!-- Puente SLF4J -> Log4j (elimina el warning de StaticLoggerBinder) -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.36</version>
+        </dependency>
     </dependencies>
 </project>
